--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
       var aLittleBit = Math.PI / 100000;
 
       d3.json(datafile, function(data) {
-        var now = "Total European Imports";        
+        var now = "Total Sugar Imports";        
         var chart = Globalmigration.chart(data, {
           element: '#diagram',
           now: now,
